--- a/index.html
+++ b/index.html
@@ -115,20 +115,25 @@
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
                 <div class="resume-column">
@@ -136,19 +141,25 @@
                     <div class="resume-item">
                         <h2 class="resume-item-title">Sr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Sr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Sr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -158,7 +169,25 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message Me</h3>
+            <form class="contact-form" action="">
+                <input type="text" placeholder="your name">
+                <input type="email" placeholder="your mail">
+                <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
     </footer>
 </body>
 
